--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "router": "^1.3.7",
-    "routes": "^2.1.0"
+    "routes": "^2.1.0",
+    "sass": "^1.58.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
