--- a/back/.env.example
+++ b/back/.env.example
@@ -1,5 +1,11 @@
 PORT=3333
 HOST=0.0.0.0
 NODE_ENV=development
-APP_KEY=RA0WKmf5dkIU6tsA9at7qES4hYuNgdVI
+APP_KEY=QxEWw8IdoxAr9aSSee-Sopm_8vjAibcr
 DRIVE_DISK=local
+DB_CONNECTION=pg
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=lucid
+PG_PASSWORD=
+PG_DB_NAME=lucid
